--- a/learning/W10.md
+++ b/learning/W10.md
@@ -1,10 +1,25 @@
-## 1. Cách vẽ hình 
+1. Cách vẽ hình 
 - <virtual> salary(): int = 0
 - <override> salary(): int -> override phải viết trước hàm 
 Hành vi giống nhau thì không cần virtual
 
-2. Đề thi 
+2. virtual ~Employee() -> ép đa hình phân giải đúng 
+
+3. Đề thi 
 Phần đầu: được sửa class cha
 Phần cuối: Không được sửa class cha, phải tự tìm giải pháp 
 
-3. virtual ~Employee() -> ép đa hình phân giải đúng 
+4. variant: Dùng để tạo ra 1 cây kế thừa nếu mình kh được sửa class cha (vì class cha được người khác làm trước, mình vô kh được sửa)
+- Muốn đa hình bắt buộc phải có con trỏ, nếu kh có con trỏ thì dùng variant 
+VD: using Employee = variant<ProductEmployee,Manager>
+
+5. Overloaded set + variant + visit
+```text
+using Employee = variant<ProductEmployee,Manager>
+for (auto item : employees)
+visit(Overloaded{
+    [](ProductEmployee e) {cout << ...},
+    [](Manager e){cout ..}
+},v
+);
+```
