--- a/learning/W10.md
+++ b/learning/W10.md
@@ -18,8 +18,19 @@ VD: using Employee = variant<ProductEmployee,Manager>
 using Employee = variant<ProductEmployee,Manager>
 for (auto item : employees)
 visit(Overloaded{
-    [](ProductEmployee e) {cout << ...},
+    [](ProductEmployee e) {cout << . ..},
     [](Manager e){cout ..}
 },v
 );
 ```
+
+6. Giải pháp để đưa ra nhiều lựa chọn (đưa ra kiểu chọn solid hay hollow trong bài Class2)
+VD: class fillEnum{
+public: 
+    inline static const int Solid = 1;
+    inline static const int Hollow = 2 ;
+}
+
+int main(){
+    new Rectangle(1,2,fillEnum::Solid,2);
+}
