--- a/Ollama/24120117.md
+++ b/Ollama/24120117.md
@@ -3,7 +3,7 @@
 
 **Đề tài:** Chatbot Hỗ Trợ Học Lập Trình bằng C++ thông qua Ollama (GPT-OSS:20B)  
 **Người thực hiện:** Nguyễn Quang Phát  
-**MSSV:** 24120117
+**MSSV:** 24120117  
 **Thời gian thực hiện:** từ 18/11/2025 đến 28/12/2025    
 
 ---
@@ -99,8 +99,58 @@ Trong `OllamaClient.cpp`, method `sendMessage()`:
 ```
 
 ### 4.2 BIÊN DỊCH CHƯƠNG TRÌNH
+### 4.2.1 TẠO SERVER
+``` Bash
+!sudo apt update
+!sudo apt install -y pciutils
+!curl -fsSL https://ollama.com/install.sh | sh
 
-### Biên dịch chương trình:
+import os
+env = os.environ.copy()
+env["OLLAMA_HOST"] = "0.0.0.0"
+env["OLLAMA_ORIGINS"] = "*"
+
+import subprocess
+def run_ollama_serve():
+  subprocess.Popen(["ollama", "serve"], env=env)
+
+import threading
+thread = threading.Thread(target=run_ollama_serve)
+thread.start()
+
+import time
+time.sleep(5)
+
+!ollama pull gpt-oss:20b
+```
+
+``` Bash
+!curl http://localhost:11434/api/generate -d '{ "model": "gpt-oss:20b", "prompt": "Who are you?", "stream": false}'
+```
+
+``` Bash
+%pip install pyngrok
+from pyngrok import ngrok
+
+from kaggle_secrets import UserSecretsClient
+user_secrets = UserSecretsClient()
+ngrok_api_key = user_secrets.get_secret("ngrok-api-key")
+ngrok.set_auth_token(ngrok_api_key) 
+
+port = 11434 
+public_url = ngrok.connect(port).public_url
+print(f" * ngrok tunnel {public_url} -> http://127.0.0.1:{port}")
+```
+
+``` Bash
+!curl https://dionna-squarelike-centrically.ngrok-free.dev/api/generate -d '{ "model": "gpt-oss:20b", "prompt": "Who are you?", "stream": false}'
+```
+
+``` Bash
+ngrok.kill() #Chỉ chạy khi muốn tắt server
+```
+
+### 4.2.1. Biên dịch chương trình:
 ```bash
 make
 ```
@@ -110,7 +160,7 @@ make
 ./chatbot
 ```
 
-### Xóa file rác để chạy lại từ đầu:
+### Xóa file rác để chạy lại từ đầu(khi đã kết thúc chương trình):
 ```bash
 make clean
 ```
@@ -125,11 +175,6 @@ make clean
 
 ### Streaming không hoạt động
 → Kiểm tra `"stream": true` trong `OllamaClient.cpp`
-
-### 4.4 Tài liệu tham khảo
-- [Ollama API Documentation](https://github.com/ollama/ollama/blob/main/docs/api.md)
-- [nlohmann/json](https://github.com/nlohmann/json)
-- [libcurl](https://curl.se/libcurl/)
 
 ## 5. QUY TRÌNH LÀM VIỆC
 
@@ -269,3 +314,9 @@ Tạo đối tượng phù hợp dựa trên input mà không để client biế
 
 ### 6.5.3. SINGLETON
 Đảm bảo chỉ có một instance duy nhất của một lớp trong toàn bộ chương trình.
+
+
+## 7. Tài liệu tham khảo
+- [Ollama API Documentation](https://github.com/ollama/ollama/blob/main/docs/api.md)
+- [nlohmann/json](https://github.com/nlohmann/json)
+- [libcurl](https://curl.se/libcurl/)
